--- a/frontend/__dist/client/client.css
+++ b/frontend/__dist/client/client.css
@@ -1,3 +1,6 @@
+.Header__Link {
+  margin-right: 20px;
+}
 .UnknownBlock {
   border: 2px solid red;
   padding: 10px;
@@ -5,7 +8,18 @@
   color: red;
 }
 .BlurbFull {
-  border: 2px solid red;
+  border: 2px solid purple;
+  width: 300px;
+  height: auto;
+}
+.BlurbFull img {
+  max-width: 100%;
+}
+.BlurbBg {
+  border: 2px solid pink;
+  width: 300px;
+  height: 200px;
+  background-size: cover;
 }
 
 /*# sourceMappingURL=/dist/client/client.css.map */
