--- a/frontend/__dist/server/index.css
+++ b/frontend/__dist/server/index.css
@@ -1,6 +1,10 @@
 .Header__Link {
   margin-right: 20px;
 }
+.Footer {
+  width: 100%;
+  margin-top: 40px;
+}
 .UnknownBlock {
   border: 2px solid red;
   padding: 10px;
